--- a/Containment-Zone-Alert-spring-boot/src/main/resources/templates/addPlace.html
+++ b/Containment-Zone-Alert-spring-boot/src/main/resources/templates/addPlace.html
@@ -48,7 +48,7 @@
     
    <div id="res">
 	<h2 id="address_text">Select a place</h2>
-    <form th:action="@{/cZone/add}" th:object="${form}" method="post" id="map_form">
+    <form th:action="@{/admin/cZone/add}" th:object="${form}" method="post" id="map_form">
          <input type="hidden" name="cId" id="c_id" />
    
      <input type="hidden" name="latitude" id="lat_field" />
