--- a/ContainmentZoneAlertApp/app/src/main/res/layout/activity_home.xml
+++ b/ContainmentZoneAlertApp/app/src/main/res/layout/activity_home.xml
@@ -1,29 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     tools:context=".HomeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/grantPermBtn"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Current Location"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_centerVertical="true"
-        android:id="@+id/current_location"
-        android:layout_centerHorizontal="true" />
+        android:text="Grant Required Permission"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/alertTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:id="@+id/latLng"
-        android:layout_below="@+id/current_location"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grantPermBtn"
+        tools:text="@string/safezone_msg"
         />
 
+    <TextView
+        android:id="@+id/locTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintEnd_toEndOf="@+id/alertTextView"
+        app:layout_constraintStart_toStartOf="@+id/alertTextView"
+        app:layout_constraintTop_toBottomOf="@+id/alertTextView"
+        tools:text="Location 1" />
 
-</RelativeLayout>
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locTextView" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
